# pace2018

./: CMakeLists.txt  LICENSE.md  README.md
src/: main.cpp  terminals_main.cpp  treewidth_main.cpp
src/solvers/: base_dp_solver.cpp  base_dp_solver.h  dreyfus_wagner.cpp  dreyfus_wagner.h  reduce_dp_solver.cpp  reduce_dp_solver.h  solver.h  table_dp_solver.cpp  table_dp_solver.h
src/structures/: cut_matrix.cpp  cut_matrix.h  graph.cpp  graph.h  tree_decomposition.cpp  tree_decomposition.h  union_find.h
src/utility/: helpers.h  partition_mergers.cpp  partition_mergers.h  partitioner.cpp  partitioner.h  stdio_runner.cpp  stdio_runner.h  terminals_stdio_runner.cpp  terminals_stdio_runner.h  treewidth_stdio_runner.cpp  treewidth_stdio_runner.h
tests/: tests_main.cpp
tests/inputs/: path_of_len_3.grtd  path_of_len_5.in  simple1.gr  simple1.td  simple2.grtd  simple2.td  simple3.grtd
tests/suites/: helpers_correctness.cpp  mergers_correctness.cpp  partitioner_correctness.cpp  stucture_correctness.cpp
